force-app/main/default/objects/Spares_Mapping__c/Spares_Mapping__c.object-meta.xml
<CustomObject>
    <label>Spares Mapping</label>
    <nameField>
        <label>Spares Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spares Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>