force-app/main/default/objects/Spares_Mapping__c/fields/Appliance_Model__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Model__c</fullName>
    <label>Appliance Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>