force-app/main/default/objects/Spares_Mapping__c/fields/Chassis__c.field-meta.xml
<CustomField>
    <fullName>Chassis__c</fullName>
    <inlineHelpText>Please enter Product Code of related spare product</inlineHelpText>
    <label>Chassis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>