force-app/main/default/objects/Spares_Mapping__c/fields/CMOS_Battery__c.field-meta.xml
<CustomField>
    <fullName>CMOS_Battery__c</fullName>
    <label>CMOS Battery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>