force-app/main/default/objects/Spares_Mapping__c/fields/HDD__c.field-meta.xml
<CustomField>
    <fullName>HDD__c</fullName>
    <inlineHelpText>Please enter Product Code of related spare product</inlineHelpText>
    <label>HDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>