force-app/main/default/objects/Spares_Mapping__c/fields/Mapping_Key__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Key__c</fullName>
    <description>Unique Key for restricting duplicate entries</description>
    <inlineHelpText>Unique Key for restricting duplicate entries</inlineHelpText>
    <label>Mapping Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>