force-app/main/default/objects/Spares_Mapping__c/fields/Memory__c.field-meta.xml
<CustomField>
    <fullName>Memory__c</fullName>
    <inlineHelpText>Please enter Product Code of related spare product</inlineHelpText>
    <label>Memory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>