force-app/main/default/objects/Spares_Mapping__c/fields/NIC__c.field-meta.xml
<CustomField>
    <fullName>NIC__c</fullName>
    <inlineHelpText>Please enter Product Code of related spare product</inlineHelpText>
    <label>NIC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>