force-app/main/default/objects/Spares_Mapping__c/fields/NIC_Type__c.field-meta.xml
<CustomField>
    <fullName>NIC_Type__c</fullName>
    <label>NIC Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>