force-app/main/default/objects/Spares_Mapping__c/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <inlineHelpText>Please enter Product Code of related spare product</inlineHelpText>
    <label>Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>