force-app/main/default/objects/Spares_Mapping__c/fields/PSU__c.field-meta.xml
<CustomField>
    <fullName>PSU__c</fullName>
    <inlineHelpText>Please enter Product Code of related spare product</inlineHelpText>
    <label>PSU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>