force-app/main/default/objects/Spares_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Appliance_Model__c</columns>
    <columns>NIC_Type__c</columns>
    <columns>Chassis__c</columns>
    <columns>HDD__c</columns>
    <columns>Memory__c</columns>
    <columns>NIC__c</columns>
    <columns>Node__c</columns>
    <columns>PSU__c</columns>
    <columns>SSD__c</columns>
    <columns>CMOS_Battery__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>